--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/sfc.png" alt="" /></a>
+										<a href="http://www.plexicoatresins.com" class="image fit"><img src="images/sfc.png" alt="" /></a>
 										<header>
 											<h3>Seamless Flooring</h3>
 											<p class="project-info">
@@ -129,7 +129,7 @@
 										<header>
 											<h3>Softwater Creatives</h3>
 											<p class="prject-info">
-												More info comming soon
+												Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente earum quisquam molestias molestiae corrupti totam. Vel aspernatur voluptate voluptatum dolorum.
 											</p>
 										</header>
 									</article>
@@ -138,27 +138,12 @@
 										<header>
 											<h3>Beau Rose</h3>
 											<p class="prject-info">
-												A Womens fashion/clothing website
+												Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente earum quisquam molestias molestiae corrupti totam. Vel aspernatur voluptate voluptatum dolorum.
 											</p>
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
-								</div>
 							</div>
-
 						</div>
 					</section>
 
@@ -172,7 +157,9 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>More info to come!!</p>
+							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
+							</p>
 
 						</div>
 					</section>
@@ -185,7 +172,8 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Currently disabled</p>
+							<p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -210,7 +198,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Z.K Barnes All Rights Reserved 2020</li><li> <a href="http://html5up.net"></a></li>
+						<li>&copy; Z.K Barnes All rights reserved.</li><li> <a href="http://html5up.net">link</a></li>
 					</ul>
 
 			</div>
