--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Zuri Barnes Official Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body class="is-preload">
 
