--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html>  <!-- this is a test-->
 	<head>
 		<title>Zuri Barnes Official Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -52,8 +52,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"><strong>Hi! I'm Zuri, a Front-End Web Developer</strong>.<br/></h2>
-								<p>I enjoy being creative, solving problems, and colaborating with others.</p>
+								<h2 class="alt"><strong>Hello! I'm Zuri, a Front-End Web Developer</strong>.<br/></h2>
+								<h3><br />I enjoy being <strong>creative</strong>.</h3>
 							</header>
 
 							<footer>
@@ -70,18 +70,15 @@
 										<img src="images/icons8-html-5-48.png" alt="html icon">
 									</div>
 									<div class="icon-box">
-										<img src="images/icons8-php-logo-40.png" alt="php icon">
+										<img src="images/icons8-php-logo-40.png"  height="48" width="48" alt="php icon">
 									</div><div class="icon-box">
 										<img src="images/icons8-css3-48.png" alt="css icon">
 									</div>
 									<div class="icon-box">
-										<img src="images/icons8-sass-64.png" alt="sass icon">
+										<img src="images/ubuntu.png" height="48" width="48" alt="linux icon">
 									</div>
 									<div class="icon-box">
-										<img src="images/icons8-ubuntu-48.png" alt="ubuntu icon">
-									</div>
-									<div class="icon-box">
-										<img src="images/aws.png" alt="amazon web services icon">
+										<img src="images/aws.png" height="48" width="70"alt="amazon web services icon">
 									</div>
 									
 								</div>
