--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<img src="images/icons8-css3-48.png" alt="css icon">
 									</div>
 									<div class="icon-box">
-										<img src="images/ubuntu.png" height="48" width="48" alt="linux icon">
+										<img src="images/icons8-ubuntu-48.png" height="48" width="48" alt="linux icon">
 									</div>
 									<div class="icon-box">
 										<img src="images/aws.png" height="48" width="70"alt="amazon web services icon">
