--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 						<!--	<a href="#top" class="image featured"><img src="https://i.ibb.co/7YN9LPF/bloom-blooming-blossom-36753.jpg" alt="bloom-blooming-blossom-36753" border="0"></a> -->
 
-							<p> I'm on a mission to grow as a person and professional. To learn new skills, and build positive relationships. To impact the world, and enjoy life. I am an experienced  Web Developer with a demonstrated history of working in the consulting industry. Skilled in Front-end Development, I enjoy creating minimal user friendly designs. I Graduated from University of Maryland, Baltimore County.</p>
+							<p> I'm on a mission to grow as a person and professional. To learn new skills, and build positive relationships. To impact the world, and enjoy life. I Graduated from the University of Maryland and currently live in Columbia, Maryland,USA</p>
 
 
 						</div>
