--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     and Youtube. Emphasis was placed on ease of use.
                     Technologies used are HTML, CSS/SASS, and Javascript. I
                     managed this site for 2 years, updating and adding
-                    functionality as requested...
+                    functionality as requested.
                   </p>
                 </header>
               </article>
