remove linux image

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
               <div class="icon-box">
                 <img src="images/icons8-css3-48.png" alt="css icon" />
               </div>
-              <div class="icon-box">
+              <!-- <div class="icon-box">
                 <img
                   src="images/ubuntu.png"
                   height="48"
                   width="48"
                   alt="linux icon"
                 />
-              </div>
+              </div> -->
               <div class="icon-box">
                 <img
                   src="images/aws.png"
