add new city pick

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <article class="item">
                 <a href="https://ellicottcitysc.org/" class="image fit"
                   ><img
-                    src="images/ecsc2.png"
+                    src="images/city.png"
                     alt="ellicott city soccer club website"
                 /></a>
                 <header>
