add new muller image

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                   href="https://zuribarnes.github.io/Muller-Project/"
                   class="image fit"
                   ><img
-                    src="images/muller-project.png"
+                    src="images/muller.jpg"
                     alt=" an image of the muller project design"
                 /></a>
                 <header>
