reduced project descriptions

--- a/index.html
+++ b/index.html
@@ -148,11 +148,7 @@
                   <p class="project-info">
                     Plexicoat Resins is a manufacturing company located in
                     Maryland. Leadership of the company, desired a clean,
-                    minimal website. This website includes links to the Cloud,
-                    and Youtube. Emphasis was placed on ease of use.
-                    Technologies used are HTML, CSS/SASS, and Javascript. I
-                    managed this site for 2 years, updating and adding
-                    functionality as requested.
+                    minimal website.
                   </p>
                 </header>
               </article>
@@ -189,10 +185,6 @@
                   <p class="project-info">
                     Ellicott City Soccer Club is a 501c3 non-profit located in
                     Maryland. I helped develop, and currently manage this site.
-                    My work includes creating landing pages, and adding
-                    functionality as requested by ECSC leadership. Wordpress,
-                    Beaver Builder, HTML/CSS, and Javascript were used in this
-                    production.
                   </p>
                 </header>
               </article>
