--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                     Ellicott City Soccer Club is a 501c3 non-profit located in
                     Maryland. I helped develop, and currently manage this site.
                   </p>
+                  <a href="https://ellicottcitysc.org/" class="btn"
+                    >View Website</a
+                  >
                 </header>
               </article>
             </div>
