--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="row">
             <div class="col-4 col-12-mobile">
               <article class="item">
-                <a href="http://www.plexicoatresins.com" class="image fit"
+                <a class="image fit"
                   ><img src="images/sfc.png" alt="plexicoat resins website"
                 /></a>
                 <header>
@@ -150,14 +150,19 @@
                     Maryland. Leadership of the company, desired a clean,
                     minimal website.
                   </p>
+                  <a
+                    href="http://www.plexicoatresins.com"
+                    class="btn"
+                    target="_blank"
+                    rel="nofollow"
+                    >View Website</a
+                  >
                 </header>
               </article>
             </div>
             <div class="col-4 col-12-mobile">
               <article class="item">
-                <a
-                  href="https://zuribarnes.github.io/YogaVillage/"
-                  class="image fit"
+                <a class="image fit"
                   ><img
                     src="images/yoga-vill.png"
                     alt="the yoga village website"
@@ -168,6 +173,13 @@
                     A prototype web design, Yoga Village was built from scratch
                     using vanilla Javascript, HTML and CSS grid.
                   </p>
+                  <a
+                    href="https://zuribarnes.github.io/YogaVillage/"
+                    class="btn"
+                    target="_blank"
+                    rel="nofollow"
+                    >View Website</a
+                  >
                 </header>
               </article>
             </div>
@@ -175,7 +187,7 @@
           <div class="row">
             <div class="col-4 col-12-mobile">
               <article class="item">
-                <a href="https://ellicottcitysc.org/" class="image fit"
+                <a class="image fit"
                   ><img
                     src="images/city.png"
                     alt="ellicott city soccer club website"
@@ -186,7 +198,11 @@
                     Ellicott City Soccer Club is a 501c3 non-profit located in
                     Maryland. I helped develop, and currently manage this site.
                   </p>
-                  <a href="https://ellicottcitysc.org/" class="btn"
+                  <a
+                    href="https://ellicottcitysc.org/"
+                    class="btn"
+                    targert="_blank"
+                    rel="nofollow"
                     >View Website</a
                   >
                 </header>
@@ -195,9 +211,7 @@
 
             <div class="col-4 col-12-mobile">
               <article class="item">
-                <a
-                  href="https://zuribarnes.github.io/Muller-Project/"
-                  class="image fit"
+                <a class="image fit"
                   ><img
                     src="images/muller.jpg"
                     alt=" an image of the muller project design"
@@ -211,6 +225,13 @@
                     his clean use of typography. I used CSS to create this
                     design
                   </p>
+                  <a
+                    href="https://zuribarnes.github.io/Muller-Project/"
+                    class="btn"
+                    targert="_blank"
+                    rel="nofollow"
+                    >View Website</a
+                  >
                 </header>
               </article>
             </div>
