--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
           <p>
             I'm on a mission to grow as a person and professional. To learn new
             skills, and build positive relationships. To impact the world, and
-            enjoy life. I Graduated from the University of Maryland and
-            currently live in Columbia, Maryland,USA
+            enjoy life. I graduated from the University of Maryland and
+            currently live in Columbia, Maryland.
           </p>
         </div>
       </section>
