--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
