add js animations

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
               <strong>Hello! I'm Zuri, a Front-End Web Developer</strong>.<br />
             </h2>
             <h3><br />I enjoy being <strong>creative</strong>.</h3>
+            <div class="container">
+              <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span</p>
+            </div>
           </header>
 
           <footer>
