--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <h2 class="alt">
               <strong>Hello! I'm Zuri, a Front-End Web Developer</strong>.<br />
             </h2>
-            <h3><br />I enjoy being <strong>creative</strong>.</h3>
+            <!-- <h3><br />I enjoy being <strong>creative</strong>.</h3> -->
             <div class="container">
-              <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span</p>
+              <p>I enjoy being<span class="typed-text"></span><span class="cursor">&nbsp;</span</p>
             </div>
           </header>
 
