--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </h2>
             <!-- <h3><br /> <strong>creative</strong>.</h3> -->
             <div class="container">
-              <p>I enjoy being <span class="typed-text"></span><span class="cursor">&nbsp;</span</p>
+              <p class="animated">I enjoy being <span class="typed-text"></span><span class="cursor">&nbsp;</span</p>
             </div>
           </header>
 
