add twitter link, and _blank, and nofollow

--- a/index.html
+++ b/index.html
@@ -54,13 +54,18 @@
           <li>
             <a
               href="https://github.com/zuriBarnes"
-              class="icon brands fa-github"
+              class="icon brands fa-github" target="_blank" rel="nofollow"
               ><span class="label">Github</span></a
             >
           </li>
           <li>
-            <a href="mailto: zurikiser@gmail.com" class="icon solid fa-envelope"
+            <a href="mailto: zurikiser@gmail.com" class="icon solid fa-envelope" target="_blank" rel="nofollow"
               ><span class="label">Email</span></a
+            >
+          </li>
+          <li>
+            <a href="https://twitter.com/zurikiser" class="icon solid fa-twitter" target="_blank" rel="nofollow"
+              ><span class="label">Twiiter</span></a
             >
           </li>
         </ul>
