--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
           <li>
             <a href="https://twitter.com/zurikiser" class="icon solid fa-twitter" target="_blank" rel="nofollow"
-              ><span class="label">Twiiter</span></a
+              ><span class="label">Twitter</span></a
             >
           </li>
         </ul>
