added brands class to twitter icon

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             >
           </li>
           <li>
-            <a href="https://twitter.com/zurikiser" class="icon solid fa-twitter" target="_blank" rel="nofollow"
+            <a href="https://twitter.com/zurikiser" class="icon brands fa-twitter" target="_blank" rel="nofollow"
               ><span class="label">Twitter</span></a
             >
           </li>
