add middle name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Logo -->
         <div id="logo">
           <!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
-          <h1 id="title">Zuri Barnes</h1>
+          <h1 id="title">Zuri K. Barnes</h1>
           <p>Front-End Web Developer</p>
         </div>
 
