add prject paragraph

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <div class="container">
           <header>
             <h2>Projects</h2>
+            <p>I work on a loooot of websites, but unfortunatley I can't show you most of them. &#128532; But here a few you can enjoy.</p>
           </header>
 
           <div class="row">
