--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                   <h3>Plexicoat Resins</h3>
                   <p class="project-info">
                     Plexicoat Resins is a manufacturing company located in
-                    Maryland. Leadership of the company, desired a clean,
-                    minimal website.
+                    Maryland.
                   </p>
                   <a
                     href="http://www.plexicoatresins.com"
@@ -179,8 +178,7 @@
                 <header>
                   <h3>Yoga Village</h3>
                   <p class="project-info">
-                    A prototype web design, Yoga Village was built from scratch
-                    using vanilla Javascript, HTML and CSS grid.
+                    A prototype web design
                   </p>
                   <a
                     href="https://zuribarnes.github.io/YogaVillage/"
@@ -205,7 +203,7 @@
                   <h3>Ellicott City Soccer Club</h3>
                   <p class="project-info">
                     Ellicott City Soccer Club is a 501c3 non-profit located in
-                    Maryland. I helped develop, and currently manage this site.
+                    Maryland.
                   </p>
                   <a
                     href="https://ellicottcitysc.org/"
@@ -229,10 +227,8 @@
                   <h3>The Muller Project</h3>
 
                   <p class="project-info">
-                    Josef Muller-Brockmann was a Swiiss graphic designer and
-                    artist. Brockmann is recognised for his simple designs and
-                    his clean use of typography. I used CSS to create this
-                    design
+                    A design inspired by Josef Muller-Brockmann, a Swiiss graphic designer and
+                    artist.
                   </p>
                   <a
                     href="https://zuribarnes.github.io/Muller-Project/"
@@ -260,8 +256,7 @@
           <p>
             I'm on a mission to grow as a person and professional. To learn new
             skills, and build positive relationships. To impact the world, and
-            enjoy life. I graduated from the University of Maryland and
-            currently live in Columbia, Maryland.
+            enjoy life.
           </p>
         </div>
       </section>
