--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container">
           <header>
             <h2>Projects</h2>
-            <p>I work on a loooot of websites, but unfortunatley I can't show you the code of most of them. &#128532; But, here a some non-contractual items I'm working on.</p>
+            <p>I work on a loooot of websites, but unfortunatley I can't show you the code of most of them. &#128532; But, here a some noncontractual items I'm working on.</p>
           </header>
 
           <div class="row">
