add new plexi image

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="col-4 col-12-mobile">
               <article class="item">
                 <a class="image fit"
-                  ><img src="images/sfc.png" alt="plexicoat resins website"
+                  ><img src="images/plexi.jpg" alt="plexicoat resins website"
                 /></a>
                 <header>
                   <h3>Plexicoat Resins</h3>
