add new busc image add project content

--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
               <article class="item">
                 <a class="image fit"
                   ><img
-                    src="images/yoga-vill.png"
-                    alt="the yoga village website"
+                    src="images/busc.prj.jpg"
+                    alt="the BUSC website"
                 /></a>
                 <header>
-                  <h3>Yoga Village</h3>
+                  <h3>Ballistic United SC</h3>
                   <p class="project-info">
-                    A prototype web design
+                   A youth soccer club in California
                   </p>
                   <a
-                    href="https://zuribarnes.github.io/YogaVillage/"
+                    href="https://busc.org//"
                     class="btn"
                     target="_blank"
                     rel="nofollow"
