--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <article class="item">
                 <a class="image fit"
                   ><img
-                    src="images/busc.prj.jpg"
+                    src="images/busc-prj.jpg"
                     alt="the BUSC website"
                 /></a>
                 <header>
