add new ecsc image

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <article class="item">
                 <a class="image fit"
                   ><img
-                    src="images/city.png"
+                    src="images/ecsc.jpg"
                     alt="ellicott city soccer club website"
                 /></a>
                 <header>
