--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
           <header>
             <h2>About Me</h2>
           </header>
+          <div class="svg">
+            <img src="images/undraw_starry_window.svg" alt="">
+          </div>
 
           <!--	<a href="#top" class="image featured"><img src="https://i.ibb.co/7YN9LPF/bloom-blooming-blossom-36753.jpg" alt="bloom-blooming-blossom-36753" border="0"></a> -->
 
