--- a/index.html
+++ b/index.html
@@ -250,9 +250,7 @@
           <header>
             <h2>About Me</h2>
           </header>
-          <div class="svg">
-            <img src="images/undraw_starry_window.svg" alt="">
-          </div>
+         
 
           <!--	<a href="#top" class="image featured"><img src="https://i.ibb.co/7YN9LPF/bloom-blooming-blossom-36753.jpg" alt="bloom-blooming-blossom-36753" border="0"></a> -->
 
@@ -261,6 +259,12 @@
             skills, and build positive relationships. To impact the world, and
             enjoy life.
           </p>
+          <h3>Self guided learning and Exploration</h3>
+          <div class="svg">
+            <img src="images/undraw_starry_window.svg" alt="">
+          </div>
+          <p></p>
+
         </div>
       </section>
 
