--- a/index.html
+++ b/index.html
@@ -255,15 +255,13 @@
           <!--	<a href="#top" class="image featured"><img src="https://i.ibb.co/7YN9LPF/bloom-blooming-blossom-36753.jpg" alt="bloom-blooming-blossom-36753" border="0"></a> -->
 
           <p>
-            I'm on a mission to grow as a person and professional. To learn new
-            skills, and build positive relationships. To impact the world, and
-            enjoy life.
-          </p>
-          <h3>Self guided learning and Exploration</h3>
+            I'm Front-End Developer 
+          </p><a href="https://www.linkedin.com/in/zuribarnes/" class="learnMore" target="_blank" rel="nofollow"></a>
+          <!-- <h3>Self guided learning and Exploration</h3>
           <div class="svg">
             <img src="images/undraw_starry_window.svg" alt="">
           </div>
-          <p></p>
+          <p></p> -->
 
         </div>
       </section>
