--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
       <section id="about" class="three">
         <div class="container">
           <header>
-            <h2>About Me</h2>
+            <h2>I'm a front-end developer.</h2>
           </header>
          
 
           <!--	<a href="#top" class="image featured"><img src="https://i.ibb.co/7YN9LPF/bloom-blooming-blossom-36753.jpg" alt="bloom-blooming-blossom-36753" border="0"></a> -->
 
           <p>
-            I'm Front-End Developer 
+            
           </p><a href="https://www.linkedin.com/in/zuribarnes/" class="learnMore" target="_blank" rel="nofollow">Read more about Me</a>
           <!-- <h3>Self guided learning and Exploration</h3>
           <div class="svg">
