css, and content

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
           <p>
             
-          </p><a href="https://www.linkedin.com/in/zuribarnes/" class="learnMore" target="_blank" rel="nofollow">Read more about Me</a>
+          </p><a href="https://www.linkedin.com/in/zuribarnes/" class="learnMore" target="_blank" rel="nofollow">Read more about me</a>
           <!-- <h3>Self guided learning and Exploration</h3>
           <div class="svg">
             <img src="images/undraw_starry_window.svg" alt="">
