edit form name, add softwater image

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <h2>Contact</h2>
           </header>
 
-          <form method="post" action="#">
+          <form method="post" name="contact" data-netlify="true">
             <div class="row">
               <div class="col-6 col-12-mobile">
                 <input type="text" name="name" placeholder="Name" />
