image updates, ratio, width, and height

--- a/index.html
+++ b/index.html
@@ -92,29 +92,29 @@
             <div id="my-tech">
               <div class="icon-box">
                 <img
-                  src="images/icon-javascript-48.png"
+                  src="images/icon-javascript-48.png" width="28" height="28"
                   alt="javascript icon"
                 />
               </div>
               <div class="icon-box">
                 <img
-                  src="images/icons8-react-native-48.png"
+                  src="images/icons8-react-native-48.png" width="28" height="28"
                   alt="react.js icon"
                 />
               </div>
               <div class="icon-box">
-                <img src="images/icons8-html-5-48.png" alt="html icon" />
+                <img src="images/icons8-html-5-48.png" width="28" height="28" alt="html icon" />
               </div>
               <div class="icon-box">
                 <img
-                  src="images/icons8-php-logo-40.png"
+                  src="images/icons8-php-logo-40.png" width="28" height="28"
                   height="48"
                   width="48"
                   alt="php icon"
                 />
               </div>
               <div class="icon-box">
-                <img src="images/icons8-css3-48.png" alt="css icon" />
+                <img src="images/icons8-css3-48.png" width="28" height="28" alt="css icon" />
               </div>
               <!-- <div class="icon-box">
                 <img
@@ -124,14 +124,14 @@
                   alt="linux icon"
                 />
               </div> -->
-              <div class="icon-box">
+              <!-- <div class="icon-box">
                 <img
                   src="images/aws.png"
                   height="48"
                   width="70"
                   alt="amazon web services icon"
                 />
-              </div>
+              </div> -->
             </div>
             <!--	<a href="#portfolio" class="button scrolly">Remove?</a> -->
           </footer>
@@ -150,7 +150,7 @@
             <div class="col-4 col-12-mobile">
               <article class="item">
                 <a class="image fit"
-                  ><img src="images/plexi.jpg" alt="plexicoat resins website"
+                  ><img src="images/plexi.jpg" width="640" height="360" alt="plexicoat resins website"
                 /></a>
                 <header>
                   <h3>Plexicoat Resins</h3>
@@ -172,7 +172,7 @@
               <article class="item">
                 <a class="image fit"
                   ><img
-                    src="images/busc-prj.jpg"
+                    src="images/busc-prj.jpg" width="640" height="360"
                     alt="the BUSC website"
                 /></a>
                 <header>
@@ -196,7 +196,7 @@
               <article class="item">
                 <a class="image fit"
                   ><img
-                    src="images/ecsc.jpg"
+                    src="images/ecsc.jpg" width="640" height="360"
                     alt="ellicott city soccer club website"
                 /></a>
                 <header>
@@ -220,7 +220,7 @@
               <article class="item">
                 <a class="image fit"
                   ><img
-                    src="images/muller.jpg"
+                    src="images/muller.jpg" width="640" height="360"
                     alt=" an image of the muller project design"
                 /></a>
                 <header>
@@ -250,13 +250,7 @@
           <header>
             <h2>I'm a front-end developer.</h2>
           </header>
-         
-
-          <!--	<a href="#top" class="image featured"><img src="https://i.ibb.co/7YN9LPF/bloom-blooming-blossom-36753.jpg" alt="bloom-blooming-blossom-36753" border="0"></a> -->
-
-          <p>
-            
-          </p><a href="https://www.linkedin.com/in/zuribarnes/" class="learnMore" target="_blank" rel="nofollow">Read more about me</a>
+     <a href="https://www.linkedin.com/in/zuribarnes/" class="learnMore" target="_blank" rel="nofollow">Read more about me</a>
           <!-- <h3>Self guided learning and Exploration</h3>
           <div class="svg">
             <img src="images/undraw_starry_window.svg" alt="">
