--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="logo">
           <!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
           <h1 id="title">Zuri K. Barnes</h1>
-          <p>Front-End Web Developer</p>
+          <p>Front-End Developer</p>
         </div>
 
         <!-- Nav -->
