--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
           <header>
             <h2 class="alt">
-              <strong>Hello! I'm Zuri, a Front-End Web Developer</strong>.<br />
+              <strong>Hello! I'm Zuri, a Front-End Developer</strong>.<br />
             </h2>
             <!-- <h3><br /> <strong>creative</strong>.</h3> -->
             <div class="container">
