projrct content edit

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <h3>The Muller Project</h3>
 
                   <p class="project-info">
-                    A design inspired by Josef Muller-Brockmann, a Swiiss graphic designer and
+                    A CSS grid design inspired by Josef Muller-Brockmann, a Swiiss graphic designer and
                     artist.
                   </p>
                   <a
